<resources>
    <string name="app_name">Patientix</string>


    <string name="action_settings">Settings</string>
    <string name="ueberschrift">Patientenaufklärung für</string>
    <string name="update">Aktualisieren</string>
    <string name="start">Start</string>
    <string name="patientname">Max Mustermann</string>
    <string name="patientid">12345</string>
    <string name="title_activity_form">FormActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title">Patientenaufklärung für</string>
</resources>
